# Pronuncy

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py  model_setup.py
backend/app/agent/: __init__.py  cache.py  gateway.py  prompts.py  tools.py
backend/app/agent/providers/: __init__.py  base.py  openai.py
backend/app/api/: router.py
backend/app/api/endpoints/: agent.py  assess.py  audio.py  history.py  models.py
backend/app/core/: exceptions.py  handlers.py  logging.py
backend/app/db/: __init__.py  connection.py  queries.py  schema.sql
backend/app/schemas/: agent.py  assess.py  history.py
backend/app/services/: acoustic_analyzer.py  phoneme_map.py  phoneme_pipeline.py
backend/app/services/accent_profiles/: __init__.py
backend/tests/: conftest.py  test_assess.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AgentChat.tsx  AgentFeedbackPanel.tsx  AgentThinkingStream.tsx  AnimatedScore.tsx  AudioRecorder.tsx  ChatBubble.tsx  ChatInput.tsx  HistoryList.tsx  ModelBadge.tsx  PracticeCard.tsx  PracticePrompt.tsx  ProgressChart.tsx  RecordButton.tsx  ResultsPanel.tsx  SettingsModal.tsx  StatusBar.tsx  TargetInput.tsx  ThinkingDots.tsx  Waveform.tsx
frontend/src/hooks/: useAudioRecorder.ts
frontend/src/i18n/: I18nContext.tsx  translations.ts
frontend/src/services/: api.ts  (+4 more)
(+3 files in other folders)
