[project]
name = "pronuncy"
version = "0.2.0"
description = "Local English pronunciation assessment"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    "whisperx>=3.0.0",
    "g2p-en>=2.1.0",
    "editdistance>=0.6.0",
    "torch>=2.0.0",
    "scipy>=1.10.0",
    "numpy>=1.24.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "mypy>=1.0.0",
    "ruff>=0.4.0",
    "pre-commit>=3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = ["whisperx.*", "faster_whisper.*", "g2p_en.*", "panphon.*", "editdistance"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
